tests/tutorial/assets/vue/pages/errors/404/component.vue
<template>
    <div style="width: 100%;">
        <h1 style="textAlign: center;">404 Error</h1>
        <h2 style="textAlign: center;">Page Not Found</h2>
    </div>
</template>

<script>
export default {
    name: 'Root',
    data() {
        return {

        }
    }
}
</script>

